--- a/pages/19905.html
+++ b/pages/19905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1675,6 +1675,41 @@ margin-left: 0em;
 
 <p>(<a href="#LambrechtsVolic14">Lambrechts-Volic 14, Theorem 8.1</a>)</p>
 
+<div class="num_example" id="ThreeTermRelation">
+<h6 id="example">Example</h6>
+
+<p><strong>(the “3-term relation”)</strong></p>
+
+<p>In the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> the <a class="existingWikiWord" href="/nlab/show/differential">differential</a> of the <a class="existingWikiWord" href="/nlab/show/graph">graph</a> as shown on the left below (the vertices on the horizontal line are the external vertices, that above the line is internal) is a linear combination as shown on the right:</p>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mphantom><mi>AAA</mi></mphantom><mrow><mtable><mtr><mtd><mo>∂</mo></mtd></mtr> <mtr><mtd><mphantom><mi>A</mi></mphantom></mtd></mtr> <mtr><mtd><mphantom><mi>a</mi></mphantom></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">\phantom{AAA}\array{ \partial \\ \phantom{A} \\ \phantom{a}}</annotation></semantics></math> <img src="https://ncatlab.org/nlab/files/TrivializationOfThreeTermIdentity.jpg" width="100" /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mphantom><mi>A</mi></mphantom><mrow><mtable><mtr><mtd><mo>=</mo></mtd></mtr> <mtr><mtd><mphantom><mi>A</mi></mphantom></mtd></mtr> <mtr><mtd><mphantom><mi>a</mi></mphantom></mtd></mtr></mtable></mrow><mphantom><mi>A</mi></mphantom></mrow><annotation encoding="application/x-tex">\phantom{A}\array{ = \\ \phantom{A} \\ \phantom{a} }\phantom{A}</annotation></semantics></math> <img src="https://ncatlab.org/nlab/files/ThreeTermIdentity.jpg" width="300" /></p>
+
+<blockquote>
+<p>graphics grabbed from <a href="#LambrechtsVolic14">Lambrechts-Volic 14, Figure 1 &amp; Figure 2</a></p>
+</blockquote>
+
+<p>Under the above <a class="existingWikiWord" href="/nlab/show/quasi-isomorphism">quasi-isomorphism</a> (Prop. <a class="maruku-ref" href="#QuasiIsoFromGraphComplexToDeRhamCohomology"></a>) from the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> to the <a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a> on the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of a <a class="existingWikiWord" href="/nlab/show/configuration+space+of+points">configuration space of points</a> given by sending each <a class="existingWikiWord" href="/nlab/show/graph">graph</a> to its <a class="existingWikiWord" href="/nlab/show/Chern-Simons+propagator">Chern-Simons</a> <a class="existingWikiWord" href="/nlab/show/Feynman+amplitude+on+compactified+configuration+spaces+of+points">Feynman amplitude on compactified configuration spaces of points</a> (Remark <a class="maruku-ref" href="#AsPerturbativeChernSimonsTheory"></a>) this relation becomes the “3-term relation” from Prop. <a class="maruku-ref" href="#DeRhamCohomologyOfFMCompactification"></a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub><mo>]</mo></mrow><mo>∧</mo><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>j</mi><mi>k</mi></mrow></msub><mo>]</mo></mrow><mo>+</mo><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>j</mi><mi>k</mi></mrow></msub><mo>]</mo></mrow><mo>∧</mo><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>k</mi><mi>i</mi></mrow></msub><mo>]</mo></mrow><mo>+</mo><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>k</mi><mi>i</mi></mrow></msub><mo>]</mo></mrow><mo>∧</mo><mrow><mo>[</mo><msub><mi>g</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub><mo>]</mo></mrow><mspace width="thickmathspace"></mspace><mo>∼</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
+     \left[g_{i j}\right] \wedge \left[ g_{j k} \right]
+     +
+     \left[g_{j k}\right] \wedge \left[ g_{k i} \right]
+     +
+     \left[g_{k i}\right] \wedge \left[ g_{i j} \right]
+     \;\sim\;
+     0
+
+</annotation></semantics></math></div>
+<p>satisfied by the <a class="existingWikiWord" href="/nlab/show/Chern-Simons+propagator">Chern-Simons propagator</a> form</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>(</mo><msub><mi>g</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><msup><mi>Ω</mi> <mn>2</mn></msup><mrow><mo>(</mo><msub><mi>FM</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo stretchy="false">)</mo><mo>)</mo></mrow><mo>)</mo></mrow><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  \left(
+    g_{i j}
+    \;\in\;
+    \Omega^2\left( FM_n(\mathbb{R}^d)  \right)
+  \right)
+  \,.
+
+</annotation></semantics></math></div></div>
+
 <p>Now we consider the analogous but richer quasi-isomorphism from the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> not just to the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of the compactified configuration space, but its full <a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a>.</p>
 
 <div class="num_defn" id="FiberIntegrationOverInternalVertices">
@@ -1715,8 +1750,8 @@ margin-left: 0em;
 
 <p>(<a href="#LambrechtsVolic14">Lambrechts-Volic 14, Theorem 5.8 and equation (111)</a>)</p>
 
-<div class="num_defn" id="QuasiIsomorphismBetweenGraphComplexAndDeRhamComplexOfFM">
-<h6 id="definition_6">Definition</h6>
+<div class="num_prop" id="QuasiIsomorphismBetweenGraphComplexAndDeRhamComplexOfFM">
+<h6 id="proposition_4">Proposition</h6>
 
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/quasi-isomorphism">quasi-isomorphism</a> between <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> and <a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a> of Fulton-MacPherson compactification)</strong></p>
 
@@ -1934,14 +1969,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 05:31:54.
+  Last revised on November  5, 2018 at 06:37:44.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
