--- a/pages/11736.html
+++ b/pages/11736.html
@@ -748,6 +748,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/AGT+correspondence">AGT correspondence</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -823,14 +827,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 14, 2018 at 02:30:12.
+  Last revised on November  5, 2018 at 11:43:43.
   See the <a href="https://ncatlab.org/nlab/history/quiver gauge theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quiver+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quiver+gauge+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/quiver+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quiver+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quiver+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quiver+gauge+theory/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quiver+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quiver+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quiver gauge theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
