--- a/pages/8027.html
+++ b/pages/8027.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1218,10 +1218,18 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>A detailed review is in</p>
+<p>More detailed review is in</p>
 
 <ul>
-<li>Rober Rodger, <em>A pedagogical introduction to the AGT conjecture</em>, Master Thesis Utrecht (2013) (<a href="http://testweb.science.uu.nl/ITF/teaching/2013/R.J.Rodger.pdf">pdf</a>)</li>
+<li>
+<p>Rober Rodger, <em>A pedagogical introduction to the AGT conjecture</em>, Master Thesis Utrecht (2013) (<a href="http://testweb.science.uu.nl/ITF/teaching/2013/R.J.Rodger.pdf">pdf</a>)</p>
+</li>
+
+<li id="Szabo15">
+<p><a class="existingWikiWord" href="/nlab/show/Richard+Szabo">Richard Szabo</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">N=2</annotation></semantics></math> gauge theories, instanton moduli spaces and geometric representation theory</em>, Journal of Geometry and Physics</p>
+
+<p>Volume 109, November 2016, Pages 83-121 (<a href="https://arxiv.org/abs/1507.00685">arXiv:1507.00685</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -1287,7 +1295,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 12:44:46.
+  Last revised on November  5, 2018 at 13:00:34.
   See the <a href="https://ncatlab.org/nlab/history/AGT correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
