--- a/pages/19914.html
+++ b/pages/19914.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1352,6 +1352,14 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>Detailed review is in</p>
+
+<ul>
+<li>Konstantin Wernli, section 3 of <em>Perturbative Quantization of Split Chern-Simons Theory on Handlebodies and Lens Spaces by the BV-BFV formalism</em>, 2018</li>
+</ul>
+
+<p>Original articles include the following</p>
+
 <ul>
 <li id="AxelrodSinger91">
 <p><a class="existingWikiWord" href="/nlab/show/Scott+Axelrod">Scott Axelrod</a>, <a class="existingWikiWord" href="/nlab/show/Isadore+Singer">Isadore Singer</a>, <em>Chern-Simons Perturbation Theory</em>, in S. Catto, A. Rocha (eds.) Proc. XXthe DGM Conf. World Scientific Singapore, 1992, 3-45; (<a href="http://arxiv.org/abs/hep-th/9110056">arXiv:hep-th/9110056</a>)</p>
@@ -1387,14 +1395,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November  5, 2018 at 01:26:23.
+  Last revised on November  6, 2018 at 02:57:11.
   See the <a href="https://ncatlab.org/nlab/history/Chern-Simons propagator" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Chern-Simons+propagator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Chern-Simons+propagator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chern-Simons+propagator/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Chern-Simons+propagator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chern-Simons+propagator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Chern-Simons propagator/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
