--- a/pages/8027.html
+++ b/pages/8027.html
@@ -1236,7 +1236,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Alexander+Belavin">Alexander Belavin</a>, M. A. Bershtein, B. L. Feigin, A. V. Litvinov, G. M. Tarnopolsky, <em>Instanton moduli spaces and bases in coset conformal field theory</em>, <a href="arxiv/1111.2803">http://arxiv.org/abs/1111.2803</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Alexander+Belavin">Alexander Belavin</a>, M. A. Bershtein, B. L. Feigin, A. V. Litvinov, G. M. Tarnopolsky, <em>Instanton moduli spaces and bases in coset conformal field theory</em> (<a href="http://arxiv.org/abs/1111.2803">arxiv/1111.2803</a>)</p>
 </li>
 
 <li>
@@ -1295,14 +1295,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 13:00:34.
+  Last revised on November  6, 2018 at 04:49:32.
   See the <a href="https://ncatlab.org/nlab/history/AGT correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AGT+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AGT+correspondence/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/AGT+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AGT+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AGT+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AGT+correspondence/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/AGT+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AGT+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AGT correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
