--- a/pages/8027.html
+++ b/pages/8027.html
@@ -1136,11 +1136,11 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>the <a class="existingWikiWord" href="/nlab/show/partition+function">partition function</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><msup><mo stretchy="false">)</mo> <mrow><mi>n</mi><mo>+</mo><mn>3</mn><mi>g</mi><mo>−</mo><mn>3</mn></mrow></msup></mrow><annotation encoding="application/x-tex">SU(2)^{n+3g-3}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory">N=2 D=4 super Yang-Mills theory</a></p>
+<p>the <a class="existingWikiWord" href="/nlab/show/instanton">instanton</a>-<a class="existingWikiWord" href="/nlab/show/partition+function">partition function</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><msup><mo stretchy="false">)</mo> <mrow><mi>n</mi><mo>+</mo><mn>3</mn><mi>g</mi><mo>−</mo><mn>3</mn></mrow></msup></mrow><annotation encoding="application/x-tex">SU(2)^{n+3g-3}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory">N=2 D=4 super Yang-Mills theory</a> (Nekrasov’s partition function, e.g. <a href="#Szabo15">Szabo 15 (2.1)</a>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Liouville+theory">Liouville theory</a> on an <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-punctured <a class="existingWikiWord" href="/nlab/show/Riemann+surface">Riemann surface</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>C</mi> <mrow><mi>g</mi><mo>,</mo><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">C_{g,n}</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/genus">genus</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math></p>
+<p>the <a class="existingWikiWord" href="/nlab/show/conformal+blocks">conformal blocks</a> of <a class="existingWikiWord" href="/nlab/show/Liouville+theory">Liouville theory</a> on an <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-punctured <a class="existingWikiWord" href="/nlab/show/Riemann+surface">Riemann surface</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>C</mi> <mrow><mi>g</mi><mo>,</mo><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">C_{g,n}</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/genus">genus</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math></p>
 </li>
 </ol>
 
@@ -1216,6 +1216,10 @@ margin-left: 0em;
 <li>
 <p>Giulio Bonelli, <em>Variations on AGT Correspondence</em>, 2013 (<a href="https://indico.cern.ch/event/217384/attachments/348854/486363/Bonelli.pdf">pdf</a>)</p>
 </li>
+
+<li id="Taki16">
+<p>Masato Taki, <em>String Theory as an Attempt of PolyMathematics</em>, talk at 2016.4/28 iTHES-AIMR-IIS (<a href="https://indico2.riken.jp/event/2215/attachments/4106/4775/Taki_invited.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>More detailed review is in</p>
@@ -1226,9 +1230,7 @@ margin-left: 0em;
 </li>
 
 <li id="Szabo15">
-<p><a class="existingWikiWord" href="/nlab/show/Richard+Szabo">Richard Szabo</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">N=2</annotation></semantics></math> gauge theories, instanton moduli spaces and geometric representation theory</em>, Journal of Geometry and Physics</p>
-
-<p>Volume 109, November 2016, Pages 83-121 (<a href="https://arxiv.org/abs/1507.00685">arXiv:1507.00685</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Richard+Szabo">Richard Szabo</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">N=2</annotation></semantics></math> gauge theories, instanton moduli spaces and geometric representation theory</em>, Journal of Geometry and Physics Volume 109, November 2016, Pages 83-121 (<a href="https://arxiv.org/abs/1507.00685">arXiv:1507.00685</a>)</p>
 </li>
 </ul>
 
@@ -1295,7 +1297,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  6, 2018 at 04:49:32.
+  Last revised on November  6, 2018 at 05:29:06.
   See the <a href="https://ncatlab.org/nlab/history/AGT correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
