--- a/pages/18905.html
+++ b/pages/18905.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9250/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9250/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -763,11 +763,7 @@ margin-left: 0em;
 <li><a href='#idea'>Idea</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
-<li><a href='#thermal_quantum_field_theory_via_periodic_euclidean_time'>Thermal quantum field theory via periodic Euclidean time</a></li>
-</ul>
-<li><a href='#properties'>Properties</a></li>
-<ul>
-<li><a href='#wick_rotation'>Wick rotation</a></li>
+<li><a href='#ThermalQuantumFieldTheoryViaPeriodicEuclideanTime'>Thermal quantum field theory via periodic Euclidean time</a></li>
 </ul>
 <li><a href='#examples'>Examples</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -781,7 +777,9 @@ margin-left: 0em;
 
 <p>In <a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a> one speaks of <em>Euclidean field theory</em> if the underlying <a class="existingWikiWord" href="/nlab/show/spaces">spaces</a> on which the <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> are defined are <a class="existingWikiWord" href="/nlab/show/Riemannian+manifolds">Riemannian manifolds</a>, as opposed to <a class="existingWikiWord" href="/nlab/show/Lorentzian+manifold">Lorentzian</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> used in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a>. Hence in Euclidean field theory there is no “<a class="existingWikiWord" href="/nlab/show/time">time</a>”, one may understand this as essentially being <a class="existingWikiWord" href="/nlab/show/statistical+mechanics">statistical mechanics</a>.</p>
 
-<h3 id="thermal_quantum_field_theory_via_periodic_euclidean_time">Thermal quantum field theory via periodic Euclidean time</h3>
+<p>In good situations <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a> relates Euclidean field theory with <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a>.</p>
+
+<h3 id="ThermalQuantumFieldTheoryViaPeriodicEuclideanTime">Thermal quantum field theory via periodic Euclidean time</h3>
 
 <p>The equal-time <a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a> on <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^{d,1}</annotation></semantics></math> in a <a class="existingWikiWord" href="/nlab/show/vacuum+state">vacuum state</a> reflecting equilibrium at <a class="existingWikiWord" href="/nlab/show/finite+number">finite</a> <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math> may be argued to be computed equivalently by Euclidean field theory on the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d \times S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/Euclidean+space">Euclidean space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d</annotation></semantics></math> with a <a class="existingWikiWord" href="/nlab/show/circle">circle</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/length">circumference</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> (e.g. <a href="#Moore03">Moore 03, section 1.1</a>):</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><munder><munder><mrow><msub><mrow><mo>⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mo>:</mo><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup><mo>,</mo><mi>T</mi></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mrow><mtext>on Minkowski spacetime</mtext><mspace width="thinmathspace"></mspace><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow></mrow><mrow><mrow><mtext>at finite temperature</mtext><mspace width="thinmathspace"></mspace><mi>T</mi></mrow></mrow></mfrac></munder><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><munder><munder><mrow><msub><mrow><mo>⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>:</mo><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mrow><mtext>on Euclidean space</mtext><mspace width="thinmathspace"></mspace><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow></mrow><mrow><mrow><mtext>with circle of circumference</mtext><mspace width="thinmathspace"></mspace><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow></mrow></mfrac></munder></mrow><annotation encoding="application/x-tex">
@@ -807,12 +805,6 @@ margin-left: 0em;
 <p>This perspective is known as <em><a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a></em> or similar, the use of a “periodic Euclidean time coordinate” is also known as <em><a class="existingWikiWord" href="/nlab/show/Matsubara+formalism">Matsubara formalism</a></em> and specifically the condition that the periodicity has to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> is known as the <em><a class="existingWikiWord" href="/nlab/show/KMS+conditions">KMS conditions</a></em>.</p>
 
 <p>(e.g. <a href="#Thoma00">Thoma 00, section 2.2</a>, <a href="#PeetersZamaklar09">Peeters-Zamaklar 09, section 1.3</a>)</p>
-
-<h2 id="properties">Properties</h2>
-
-<h3 id="wick_rotation">Wick rotation</h3>
-
-<p>In good situations <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a> relates Euclidean field theory with <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a>.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -847,6 +839,10 @@ margin-left: 0em;
 <p>On thermal quantum field theory:</p>
 
 <ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Jean+Zinn-Justin">Jean Zinn-Justin</a>, <em>Quantum Field Theory at Finite Temperature: An Introduction</em> (<a href="https://arxiv.org/abs/hep-ph/0005272">arXiv:hep-ph/0005272</a>)</p>
+</li>
+
 <li id="Thoma00">
 <p>Markus H. Thoma, <em>New Developments and Applications of Thermal Field Theory</em> (<a href="https://arxiv.org/abs/hep-ph/0010164">arXiv:hep-ph/0010164</a>)</p>
 </li>
@@ -887,14 +883,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 09:51:55.
+  Last revised on November  8, 2018 at 10:46:20.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Euclidean field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
